--- a/secretkeys.env.example
+++ b/secretkeys.env.example
@@ -1,4 +1,16 @@
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+TELEGRAM_STARS_PROVIDER_TOKEN=your_stars_provider_token_here
+
+# Shop Configuration
+# FREE_SHOP_MODE=true - бесплатный тестовый режим (товары выдаются без оплаты Stars)
+# FREE_SHOP_MODE=false или не установлено - обычный режим с оплатой Stars
+FREE_SHOP_MODE=false
+
+# Transaction Configuration
+# DISABLE_TRANSACTIONS=true - блокировка транзакций на выкуп/продажу TONDEV (тестовый режим)
+# DISABLE_TRANSACTIONS=false или не установлено - транзакции включены (продакшн режим)
+DISABLE_TRANSACTIONS=false
+
 TON_API_KEY=your_ton_api_key_here
 
 # Wallet Configuration
